rnsc/tests/snapshots/error-parser-type_hints-methodref-trailing_tokens.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @methodref MyClass methodName (I)V trailing
.super java/lang/Object
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@methodref'
   ╭─[ test_data/integration/error/parser/type_hints/methodref/trailing_tokens.rns:1:43 ]
   │
 1 │ .class @methodref MyClass methodName (I)V trailing
   │        ─────┬────                         ────┬───  
   │             ╰─────────────────────────────────────── '@methodref' type hint takes 3 operands
   │                                               │     
   │                                               ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
----- HASH -----
not generated
